--- a/Aunar/app/src/main/AndroidManifest.xml
+++ b/Aunar/app/src/main/AndroidManifest.xml
@@ -2,18 +2,34 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="co.qualitysolutions.aunar" >
 
+    <!-- Acceso a cuentas de google -->
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <!-- /* Acceso a internet*/ -->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <!-- /* Evitar que el celular entre en reposo para que lleguen la notificaciones*/ -->
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <!-- /* recibir notificaciones PUSH del servicio GCM*/ -->
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+    <!-- *Si el dispositivo sobre el que estamos ejecutando la aplicación dispone de una versión inferior 4.1 (API 16)*/ -->
+    <uses-permission
+        android:name="co.qualitysolutions.aunar.permission.C2D_MESSAGE"
+        android:protectionLevel="signature" />
+    <!-- /* Acceso a vibracion*/ -->
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <!-- /* Acceso a Red*/ -->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+
         <activity
             android:name=".SplashActivity"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.Translucent.NoTitleBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -25,6 +41,18 @@
             android:name=".MyActivity"
             android:label="@string/app_name">
         </activity>
+        <receiver
+            android:name="com.google.android.gcm.GCMBroadcastReceiver"
+            android:permission="com.google.android.c2dm.permission.SEND" >
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+                <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
+
+                <category android:name="co.qualitysolutions.aunar" />
+            </intent-filter>
+        </receiver>
+
+        <service android:name=".GCMIntentService" />
     </application>
 
 </manifest>
